After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 760447 - nm-dns-manager.c: fails to compile without libsoup.h
nm-dns-manager.c: fails to compile without libsoup.h
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: general
1.0.x
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-01-11 10:24 UTC by Matthew Millar
Modified: 2016-01-11 11:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
nm-dns-manager.c include gio.h patch (377 bytes, patch)
2016-01-11 10:24 UTC, Matthew Millar
none Details | Review

Description Matthew Millar 2016-01-11 10:24:20 UTC
Created attachment 318713 [details] [review]
nm-dns-manager.c include gio.h patch

Error:
When configured with --without-libsoup, nm-dns-manager.c compilation fails with:
dns-manager/nm-dns-manager.c:438:25: error: 'G_IO_ERROR' undeclared (first use in this function)
     g_set_error (error, G_IO_ERROR, g_io_error_from_errno (errnosv),

Cause:
G_IO_ERROR is declared in gio.h, which is included with the libsoup headers; so unavailable when configured with --without-libsoup (#if WITH_LIBSOUP).

Solution:
In nm-dns-manager.c, following the #if WITH_LIBSOUP, include:
#else
#include <gio/gio.h>


Notes:
Issue didn't exist in 0.9.8.10 because G_IO_ERROR wasn't used.
Comment 1 Thomas Haller 2016-01-11 11:56:15 UTC
fixed in nm-1-0: http://cgit.freedesktop.org/NetworkManager/NetworkManager/commit/?id=49107121ab03be766f3f930333cc4b362d40c7ea


(master is not affected, because nm-glib.h always includes gio.h)