build: fix missing <gio/gio.h> include for "nm-dns-manager.c"

When compiling with

  ./configure \
    --without-libsoup \
    --disable-concheck \
    --with-resolvconf=/xx/yy/resolvconf

we must explicitly include <gio/gio.h>.

https://bugzilla.gnome.org/show_bug.cgi?id=760447

[thaller@redhat.com: original patch modified to always include gio.h]